fix(java): repair 18 Java solutions marked broken or unimplemented
These files carried a `// TODO: fix` / `// TODO: implement` marker or had no
working solution at all, so they read as "solved" to every coverage scan and to
the README while not actually solving their problem.

Repaired: LC 50 Pow, LC 190 Reverse Bits, LC 250 Count Univalue Subtrees,
LC 251 Flatten 2D Vector, LC 371 Sum of Two Integers, LC 406 Queue
Reconstruction by Height, LC 543 Diameter of Binary Tree, LC 654 Maximum Binary
Tree, LC 678 Valid Parenthesis String, LC 722 Remove Comments, LC 737 Sentence
Similarity II, LC 797 All Paths From Source to Target, LC 849 Maximize Distance
to Closest Person, LC 866 Prime Palindrome (was an empty class), LC 951 Flip
Equivalent Binary Trees, LC 1032 Stream of Characters.

Two are narrower than the rest: LC 417 Pacific Atlantic Water Flow only had a
stale marker - its `TODO: fix below` pointed at a commented-out `List.of` call
whose Java-8 `Arrays.asList` replacement was already in place, so the dead line
and the marker went; LC 3408 Design Task Manager just loses an unused import.

Existing working V1/V2 variants were kept as-is, not renumbered. A TODO marker
was removed only where the defect it named is actually resolved.

All 18 compile clean against the existing tree. Correctness verification is
still outstanding: the agents doing this work were interrupted by a session
limit before reporting their test results, so these fixes are compile-verified
but not yet example-verified. That pass is next.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>